# github-mcp-server

./: .env.dist  .gitignore  README.md  client_shttp.py  client_sse.py  client_stdio.py  mcp_configs.json.dist  pyproject.toml  ruff.toml  server.py  server_shttp.py  server_sse.py
app/: constants.py  routes.py  server.py  services.py
lib/: custom_fastmcp.py  response.py  utils.py
