[project]
name = "github-explorer"
version = "0.1.0"
description = "A simple MCP GitHub explorer server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.5.1",
    "requests>=2.32.3",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling", ]
build-backend = "hatchling.build"

[project.scripts]
server = "server:main"
server_sse = "server_sse:main"
server_shttp = "server_shttp:main"